data/derived/comb/progs/unify/prog6579.ml.out
Characters 155-181:
  let args = List.combine (List.rev l1)@0 (List.rev l2)@0 in
             ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list -> ('b * 'a) list
       but an expression was expected of type 'c list
